--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../dist/output.css" rel="stylesheet" />
+    <link href="dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="dist/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="dist/favicon_io/favicon-32x32.png">
@@ -18,8 +18,8 @@
       <div class="relative flex w-full items-center justify-between">
         <div class="p-4">
           <a href="#gambar" class="flex gap-x-2">
-            <img src="../dist/img/navLogo.png" alt="" />
-            <img src="../dist/img/navLogoPOSI.png" alt="" />
+            <img src="dist/img/navLogo.png" alt="" />
+            <img src="dist/img/navLogoPOSI.png" alt="" />
           </a>
           <button id="hamburger" type="button" name="button" class="absolute right-4 top-6 lg:hidden">
             <svg id="kotak" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor">
@@ -56,12 +56,12 @@
     <!-- NAV END -->
 
     <!-- GAMBAR -->
-    <img class=" pt-24  w-full object-cover lg:h-[800px]" src="../dist/img/banner 1.png" />
+    <img class=" pt-24  w-full object-cover lg:h-[800px]" src="dist/img/banner 1.png" />
     <!-- <div id="gambar" class="pt-24">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide bg-cover bg-center">
-            <img class="h-[620px] w-full object-cover lg:h-[650px]" src="../dist/img/banner 1.png" />
+            <img class="h-[620px] w-full object-cover lg:h-[650px]" src="dist/img/banner 1.png" />
           </div>
           <div class="swiper-slide bg-cover bg-center">
             <img class="h-[620px] w-full object-cover lg:h-[650px]" src="#" />
@@ -87,7 +87,7 @@
     <!-- TENTANG OSC -->
     <div id="tentangOSC" class="container px-10 pt-10 lg:pt-32  lg:flex">
       <h1 class=" text-4xl font-bold text-black lg:hidden">Tentang OSC</h1>
-      <img class="mt-5 lg:-mt-8 lg:-order-1 " src="../dist/img/logo olsc warna 1.png" alt="" />
+      <img class="mt-5 lg:-mt-8 lg:-order-1 " src="dist/img/logo olsc warna 1.png" alt="" />
       <div class="lg:ml-10 lg:pl-20">
         <h1 class="hidden  text-5xl font-bold text-black lg:block">Tentang OSC</h1>
         <p class="mt-5 text-justify">Pijar Sekolah terus berkomitmen untuk mewujudkan #SekolahUnggul bahkan di tengah pandemi COVID-19. Salah satunya dengan menyelenggarakan olimpiade untuk para siswa berprestasi. Kali ini Pijar Sekolah bersama SMK Telkom Lampung mengadakan kegiatan “Olimpiade Siswa Cerdas” untuk tingkat SMP/MTs sederajat se-provinsi Lampung.</p>
@@ -155,10 +155,10 @@
               <div class="mb-1 mt-2 w-full self-end rounded-md bg-white p-1 text-center  text-xs font-medium lg:mt-6 lg:text-lg lg:font-semibold">OSC Nasional</div>
             </div>
           </div>
-          <img class="col-span-2 w-72 lg:col-span-3 lg:w-[700px]" src="../dist/img/Group 5.png" alt="" />
+          <img class="col-span-2 w-72 lg:col-span-3 lg:w-[700px]" src="dist/img/Group 5.png" alt="" />
           <!-- <div class="relative col-span-2 rounded-lg bg-biruTua lg:col-span-3">
             <div class="flex justify-between p-3">
-              <img class="absolute h-40" src="../dist/img/m502t0008_06jun22_trophy_02.png" alt="" />
+              <img class="absolute h-40" src="dist/img/m502t0008_06jun22_trophy_02.png" alt="" />
               <div class="text-center ">
                 <h1>AWARDING</h1> 
                 <h2>olimpiade Siswa Cerdas</h2>
@@ -180,7 +180,7 @@
       <div class="mt-10 lg:flex-col">
         <div class="mt-10 gap-12 lg:mt-16 lg:flex">
           <div>
-            <div class="h-20 w-20 bg-cover bg-no-repeat" style="background-image: url(../dist/img/logo.png)"></div>
+            <div class="h-20 w-20 bg-cover bg-no-repeat" style="background-image: url(dist/img/logo.png)"></div>
           </div>
           <div class="lg:px-5">
             <h2 class=" text-base font-bold text-orangeMuda lg:text-xl">Olimpiade Siswa Cerdas</h2>
@@ -191,7 +191,7 @@
         </div>
         <div class="mt-10 gap-12 lg:mt-16 lg:flex">
           <div>
-            <div class="h-20 w-20 bg-cover bg-no-repeat" style="background-image: url(../dist/img/logo.png)"></div>
+            <div class="h-20 w-20 bg-cover bg-no-repeat" style="background-image: url(dist/img/logo.png)"></div>
           </div>
           <div class="lg:px-5">
             <h2 class="text-base font-bold text-orangeMuda lg:text-xl">Olimpeiade Siswa Cerdas</h2>
@@ -202,7 +202,7 @@
         </div>
         <div class="mt-10 gap-12 lg:mt-16 lg:flex">
           <div>
-            <div class="h-20 w-20 bg-cover bg-no-repeat" style="background-image: url(../dist/img/logo.png)"></div>
+            <div class="h-20 w-20 bg-cover bg-no-repeat" style="background-image: url(dist/img/logo.png)"></div>
           </div>
           <div class="lg:px-5">
             <h1 class="text-3xl font-bold text-biruTua lg:text-5xl">Awarding</h1>
@@ -229,7 +229,7 @@
       <div class="swiper mySwiper1 mt-20 block">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/jabar.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/jabar.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1">
                 <a target="_blank" href="https://www.youtube.com/watch?v=i80BIcOFtrA&t=4115s">
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/jateng&diy.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/jateng&diy.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
                 <a target="_blank" href="https://www.youtube.com/watch?v=1N4dLytr2bc">
@@ -249,7 +249,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/sumatera.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/sumatera.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
                 <a target="_blank" href="https://www.youtube.com/watch?v=WoDaqdOmdBY&t=4396s">
@@ -259,7 +259,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/jabodetabek.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/jabodetabek.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
                 <a target="_blank" href="https://www.youtube.com/watch?v=zE4C-6JAb_s">
@@ -269,7 +269,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/jatimBaliNusra.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/jatimBaliNusra.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
                 <a target="_blank" href="https://www.youtube.com/watch?v=wZFv8w6PJEs">
@@ -279,7 +279,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/kalimantan.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/kalimantan.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
                 <a target="_blank" href="https://www.youtube.com/watch?v=wZFv8w6PJEs">
@@ -289,7 +289,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img class="w-full object-cover lg:w-full" src="../dist/img/kti.jpeg" />
+            <img class="w-full object-cover lg:w-full" src="dist/img/kti.jpeg" />
             <div class="flex justify-center">
               <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
                 <a target="_blank" href="https://www.youtube.com/watch?v=wZFv8w6PJEs">
@@ -310,7 +310,7 @@
       <h1 class="text-center text-5xl font-bold text-biruTua">Pemenang Nasional</h1>
       <div class="flex mt-20 justify-center">
         <div class="mt-10 h-80 w-80 flex flex-col justify-center">
-          <img class=" object-cover " src="../dist/img/kti.jpeg" />
+          <img class=" object-cover " src="dist/img/kti.jpeg" />
           <div class="flex justify-center">
             <button class="mt-3 rounded-md lg:w-2/3 lg:rounded-full bg-orangeMuda p-1"">
               <a target="_blank" href="https://www.youtube.com/watch?v=wZFv8w6PJEs">
@@ -326,7 +326,7 @@
     
     <!-- SEBELUM FOOTER -->
     <!-- <div class="relative h-[550px] bg-[#D9D9D9] shadow-xl">
-      <img class="absolute left-20 top-28" src="../dist/img/download (3) 2.png" alt="" />
+      <img class="absolute left-20 top-28" src="dist/img/download (3) 2.png" alt="" />
       <div>
         <h1>Ayo Bergabung!</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis beatae, a at labore ipsum repellat quos impedit culpa atque exercitationem?</p>
@@ -339,7 +339,7 @@
       <div class="container">
         <div class="flex flex-wrap lg:justify-between">
           <div class="mb-12 w-full font-medium text-slate-300 lg:w-2/4 ">
-            <img class="mb-5" alt="" src="../dist/img/download (3) 3.png" />
+            <img class="mb-5" alt="" src="dist/img/download (3) 3.png" />
             <p class="mb-2 text-justify lg:pr-40">Pijar Sekolah adalah sebuah platform pembelajaran digital terpadu yang mendukung pihak sekolah dalam menciptakan pembelajaran digital yang seru dan menyenangkan. Pijar Sekolah memiliki ribuan konten digital yang menarik, mulai dari Buku Digital Interaktif, Buku Digital, Video Pembelajaran, hingga Laboratorium Maya yang bisa dimanfaatkan oleh semua siswa untuk mendukung mereka dalam belajar di sekolah.</p>
           </div>
           <div class="mb-12  w-full lg:w-1/5">
@@ -439,7 +439,7 @@
     <!-- <div class="mt-32 h-[550px] bg-gradient-to-tr from-[#1A4B6D] to-[#2D7FBA] text-white">
       <div class="flex flex-wrap py-9 px-16">
         <div class="mr-72 w-1/3">
-          <img class="left-20 top-28" alt="" src="../dist/img/download (3) 3.png" />
+          <img class="left-20 top-28" alt="" src="dist/img/download (3) 3.png" />
           <p class="mt-9 text-justify">Pijar Sekolah adalah sebuah platform pembelajaran digital terpadu yang mendukung pihak sekolah dalam menciptakan pembelajaran digital yang seru dan menyenangkan. Pijar Sekolah memiliki ribuan konten digital yang menarik, mulai dari Buku Digital Interaktif, Buku Digital, Video Pembelajaran, hingga Laboratorium Maya yang bisa dimanfaatkan oleh semua siswa untuk mendukung mereka dalam belajar di sekolah.</p>
         </div>
         <div class="flex w-1/3">
@@ -516,6 +516,6 @@
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="../dist/js/script.js"></script>
+    <script src="dist/js/script.js"></script>
   </body>
 </html>
