--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- GAMBAR -->
     <img class=" pt-24  w-full object-cover lg:h-[800px]" src="dist/img/banner 1.png" />
-    <!-- <div id="gambar" class="pt-24">
+    <div id="gambar" class="pt-24">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide bg-cover bg-center">
@@ -74,9 +74,9 @@
           </div>
         </div>
         <!-- <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
-        <!-- <div class="swiper-pagination"></div>
-      </div> -->
+        <div class="swiper-button-prev"></div>  -->
+        <div class="swiper-pagination"></div>
+      </div>
 
       <!-- <h1 class="absolute bottom-10 left-5 z-10 text-4xl font-bold text-slate-100 md:text-5xl lg:text-6xl">
         Lorem Ipsum
