--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide ">
-            <img class=" w-full object-cover lg:h-[650px]" src="dist/img/banner 1.png" />
+            <img class=" w-full object-cover " src="dist/img/banner 1.png" />
           </div>
-          <div class="swiper-slide bg-cover bg-center">
-            <img class=" w-full object-cover lg:h-[650px]" src="dist/img/Pijar-KV Award_rev 2-1.png" />
+          <div class="swiper-slide bg-cover ">
+            <img class=" w-full object-cover " src="dist/img/Pijar-KV Award_rev 2-1.png" />
           </div>   
         </div>
         <!-- <div class="swiper-button-next"></div>
