--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           <div class="swiper-slide bg-cover ">
             <img class=" w-full object-cover " src="dist/img/Pijar-KV Award_rev 2-1.png" />
           </div>   
+          <div class="swiper-slide bg-cover ">
+            <img class=" w-full object-cover " src="dist/img/9 - 2.png" />
+          </div>   
         </div>
         <!-- <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>  -->
