--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs xl:text-lg lg:text-sm lg:font-semibold text-white">OSC Jawa Barat</h1>
               </a>
             </button>
@@ -202,7 +202,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs xl:text-lg lg:text-sm lg:font-semibold text-white">OSC Jateng & DIY</h1>
               </a>
             </button>
@@ -217,7 +217,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs xl:text-lg lg:text-sm lg:font-semibold text-white">OSC Sumatera</h1>
               </a>
             </button>
@@ -234,7 +234,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs lg:text-sm lg:font-semibold text-white">OSC Jabodetabek & Serang</h1>
               </a>
             </button>
@@ -249,7 +249,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs lg:text-base lg:font-semibold text-white">OSC Jatim, Bali, Nusra</h1>
               </a>
             </button>
@@ -266,7 +266,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs lg:text-lg lg:font-semibold text-white">OSC Kalimantan</h1>
               </a>
             </button>
@@ -281,7 +281,7 @@
         <div class="mt-10 bg-[#F3F3F3] lg:h-[623px] lg:w-[391px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs lg:text-lg lg:font-semibold text-white">OSC KTI</h1>
               </a>
             </button>
@@ -295,13 +295,13 @@
         </div>
       </div>
     </div>
-    <div id="pemenang" class="px-5 pt-32">
+    <div class="px-5 pt-32">
       <h1 class="text-center text-5xl font-bold text-biruTua ">Pemenang Nasional</h1>
       <div class="lg:flex justify-center gap-10 mt-10">
         <div class="mt-10 bg-[#F3F3F3] lg:h-[915px] lg:w-[534px] rounded-lg lg:rounded-3xl">
           <div class="py-5 lg:px-14 px-9 flex items-center justify-center flex-col">
             <button class=" lg:px-10 lg:rounded-full bg-orangeMuda rounded-full py-2 px-4 lg:py-2">
-              <a target="_blank" href="">
+              <a  href="">
                 <h1 class="text-center text-xs lg:text-lg lg:font-semibold text-white">OSC Nasional</h1>
               </a>
             </button>
@@ -315,7 +315,7 @@
         </div>
       </div>
     </div>
-    <div id="pemenang" class="px-5 pt-32">
+    <div class="px-5 pt-32">
       <h1 class="text-center text-5xl font-bold text-biruTua ">Awarding</h1>
       <div class="lg:flex justify-center gap-10 mt-10">
         <div class="mt-10 bg-[#F3F3F3] lg:py-11 lg:w-[534px] rounded-lg lg:rounded-3xl">
